test/positive/feature_nativeint.java

  public class feature_nativeint {
    public static native int m(int i);
  }

