test/negative/feature_native.java

  public class feature_native {
    public feature_native() {}
    public native int m();
  }

